# mean-field-tools

./: .gitignore  LICENSE  README.md  __init__.py  human_capital.py  pyproject.toml  script.py
.github/workflows/: full-tests.yml  tests.yml  unit-tests.yml
deep_bsde/: __init__.py  function_approximator.py
deep_bsde/test/: test_function_approximator.py
experiments/: deep_bsde_quadratic.ipynb
finite_differences/: __init__.py  fokker_planck.py  test_fokker_planck.py
human_capital/: script.py
linear_quadratic/: ode_solver.py  script.py
mean_field_tools/deep_bsde/: README.md  artist.py  filtration.py  forward_backward_sde.py  function_approximator.py  measure_flow.py  script.py  utils.py
mean_field_tools/deep_bsde/script/: common_noise_measure_flow.py  numeric_forward_sde.py  ornstein_uhlenbeck.py  picard_iterations_coupled_fbsde.py  picard_iterations_coupled_fbsde_copy.py  picard_iterations_linear.py  systemic_risk.py  terminal_quadratic_no_drift.py  terminal_quadratic_with_drift.py  terminal_quadratic_with_stochastic_drift.py
mean_field_tools/deep_bsde/script/evaluations/: common_noise_measure_flow.py  (+2 more)
mean_field_tools/deep_bsde/test/: test_backward_sde.py  test_backward_sde_no_drift.py  test_backward_sde_solve.py  test_backward_sde_with_drift.py  test_fbsde.py  test_filtration.py  test_forward_backward_sde.py  test_forward_sde.py  test_function_approximator.py
mean_field_tools/finite_differences/: fokker_planck.py  test_fokker_planck.py
mean_field_tools/human_capital/: script.py
mean_field_tools/linear_quadratic/: ode_solver.py  script.py
(+58 files in other folders)
