[tool.poetry]
name = "mean-field-tools"
version = "0.1.0"
description = "Tools for numerical simulations of mean field games"
authors = ["Felipe <fjpantunes2@gmail.com>"]
readme = "README.md"
packages = [{include = "mean_field_tools"}]

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^1.26.4"
black = "^24.4.2"
pytest = "^8.2.0"
scipy = "^1.13.0"
matplotlib = "^3.8.4"
torch = {version = "^2.3.0+cpu", source = "pytorch_cpu"}
tqdm = "^4.66.4"


[[tool.poetry.source]]
name = "pytorch_cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
